# aimlab_autoaim

./: CMakeLists.txt  getWindow.h  main.cpp  opencv4.11.sln  windowShot.h
opencv4.11/: getWindow.h  main.cpp  opencv4.11.vcxproj  opencv4.11.vcxproj.filters  windowShot.h
opencv4.11/x64/Release/: opencv4.11.exe.recipe  opencv4.11.iobj  opencv4.11.ipdb
opencv4.11/x64/Release/opencv4.11.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test/: test.cpp  test.vcxproj
test/x64/Release/: test.exe.recipe  test.iobj  test.ipdb
test/x64/Release/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test.lastbuildstate
